--- a/where/where.css
+++ b/where/where.css
@@ -12,3 +12,28 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+#info_container {
+	padding: 5px;
+	position: absolute;
+	top: 16px;
+	left: 100px;
+	background: rgba(0, 0, 0, 0.6);
+	box-shadow: 0px 2px 2px black;
+	border-radius: 8px;
+}
+
+#carmen_info, #waldo_info {
+	font-size: 24px;
+	text-shadow: 0px 1px 2px black;
+	color: white;
+	display: inline;
+}
+
+table {
+	text-align: center;
+}
+
+table caption {
+	font-size: 28px;
+}
